@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.386 2005/09/21 03:32:45 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.387 2005/09/21 19:58:20 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  21 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  fat16 mojo
 
   20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
